Bug 485455 - Audio indicators missing
Summary: Audio indicators missing
Status: VERIFIED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: master
Platform: Other Linux
: HI major
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-04-12 19:17 UTC by Nate Graham
Modified: 2024-05-01 13:52 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Missing audio indicators controls (982.22 KB, image/jpeg)
2024-04-12 19:17 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2024-04-12 19:17:06 UTC
Created attachment 168431 [details]
Missing audio indicators controls

As of current git master, audio indicators are missing in the Task Manager for task icons and task tooltips of apps playing music. See attached screenshot.

While task tooltips do show playback controls, they're missing the volume controls that should be appear below them.
Comment 1 Bug Janitor Service 2024-05-01 08:31:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/libraries/pulseaudio-qt/-/merge_requests/37
Comment 2 Kai Uwe Broulik 2024-05-01 09:50:18 UTC
Git commit 9a09133fb368ba400e5748dcf88a32a478d44ea0 by Kai Uwe Broulik.
Committed on 01/05/2024 at 08:28.
Pushed by broulik into branch 'master'.

Stream: Fix client

In pulseaudio-qt, client is a *list*, unlike plasma-pa where it was
a map where the PulseAudio index was used as key.

Fix it by looking for the client in the given list instead.

M  +8    -1    src/stream.cpp

https://invent.kde.org/libraries/pulseaudio-qt/-/commit/9a09133fb368ba400e5748dcf88a32a478d44ea0
Comment 3 Nate Graham 2024-05-01 13:52:11 UTC
Confirmed fixed now. Thanks!