Stream: Fix client

In pulseaudio-qt, client is a *list*, unlike plasma-pa where it was
a map where the PulseAudio index was used as key.

Fix it by looking for the client in the given list instead.

BUG: 485455